import .NET Core icon resolved

--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -7,9 +7,8 @@ import HTML from "../icons/tech/HTML.astro";
 import JavaScript from "../icons/tech/JavaScript.astro";
 import Laravel from "../icons/tech/Laravel.astro";
 import Figma from "../icons/tech/Figma.astro";
-import Sass from "../icons/tech/Sass.astro";
 import CSS from "../icons/tech/CSS.astro";
-import NETCore from "../icons/tech/NetCore.astro";
+import NETCore from "../icons/tech/NETCore.astro";
 import Boostrap from "../icons/tech/Boostrap.astro";
 import Git from "../icons/tech/Git.astro";
 import CSharp from "../icons/tech/CSharp.astro";
