--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ import Stack from "../icons/Stack.astro";
           web applications from scratch 🚀 and learning new things.
         </p>
 
-        <ColoredButton>
+        <ColoredButton link="./MyCV.pdf">
           <span>Resume</span>
           <Link class="size-5" />
         </ColoredButton>
