link chatbot resolved

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -74,7 +74,7 @@ const PROJECTS = [
             </ColoredButton>
             <NotColoredButton 
               class="w-[45%]"
-              preview={preview}
+              link={preview}
             >
               <span class="text-md">Preview</span>
               <Expand class="size-4" />
