--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -1,21 +1,17 @@
 ---
 // Icons
 import React from "../icons/tech/React.astro";
-import Tailwind from "../icons/tech/Tailwind.astro";
-import ReduxIcon from "../icons/tech/ReduxIcon.astro";
+import Angular from "../icons/tech/Angular.astro";
+import TypeScript from "../icons/tech/TypeScript.astro";
 import HTML from "../icons/tech/HTML.astro";
 import JavaScript from "../icons/tech/JavaScript.astro";
 import Laravel from "../icons/tech/Laravel.astro";
-import Figma from "../icons/tech/Figma.astro";
 import CSS from "../icons/tech/CSS.astro";
-import NETCore from "../icons/tech/NETCore.astro";
-import Boostrap from "../icons/tech/Boostrap.astro";
+import NET from "../icons/tech/NET.astro";
 import Git from "../icons/tech/Git.astro";
 import CSharp from "../icons/tech/CSharp.astro";
 import Python from "../icons/tech/Python.astro";
 import Azure from "../icons/tech/Azure.astro";
-import Flask from "../icons/tech/Flask.astro";
-import MongoDB from "../icons/tech/MongoDB.astro";
 import MySQL from "../icons/tech/MySQL.astro";
 import SQL from "../icons/tech/SQL.astro";
 
@@ -25,53 +21,40 @@ const TECH = [
     icon: React,
   },
   {
-    name: "Tailwind",
-    icon: Tailwind,
+    name: "Angular",
+    icon: Angular,
   },
   {
-    name: "Redux",
-    icon: ReduxIcon,
+    name: "TypeScript",
+    icon: TypeScript,
   },
   {
     name: "CSS3",
     icon: CSS,
   },
   {
-    name: "JavaScript",
-    icon: JavaScript,
-  },
-  {
-    name: ".NET Core",
-    icon: NETCore,
-  },
-  {
-    name: "Boostrap",
-    icon: Boostrap,
-  },
-
-  {
     name: "HTML5",
     icon: HTML,
   },
-
   {
-    name: "Figma",
-    icon: Figma,
-  },
-  {
-    name: "Git",
-    icon: Git,
+    name: "JavaScript",
+    icon: JavaScript,
   },
   {
     name: "C#",
     icon: CSharp,
   },
   {
-    name: "Python",
-    icon: Python,
+    name: ".NET",
+    icon: NET,
   },
   {
-    name: "Azure",
+    name: "Git",
+    icon: Git,
+  },
+  
+  {
+    name: "Azure DevOps",
     icon: Azure,
   },
   {
@@ -82,18 +65,6 @@ const TECH = [
     name: "Microsoft SQL Server",
     icon: SQL,
   },
-  {
-    name: "MongoDB",
-    icon: MongoDB,
-  },
-  {
-    name: "Flask",
-    icon: Flask,
-  },
-  {
-    name: "Laravel",
-    icon: Laravel,
-  },
 ];
 ---
 
@@ -102,7 +73,7 @@ const TECH = [
     {
       TECH.map((tech) => (
         <div class="flex relative group  bg-white/10 py-3 lg:w-[15%]  w-[30%] items-center rounded justify-center hover:bg-white/15 transition">
-          <div class="absolute rounded-full w-16 h-16 opacity-0 bg-lavanda blur-lg group-hover:opacity-20 transition"/>
+          <div class="absolute rounded-full w-16 h-16 opacity-0 bg-lavanda blur-lg group-hover:opacity-50 transition duration-700"/>
           <div class="relative flex flex-col items-center  ">
             <tech.icon class="lg:size-8 size-10 mb-5" />
             <p class="text-xs text-center">{tech.name}</p>
