--- a/src/icons/tech/CSS.astro
+++ b/src/icons/tech/CSS.astro
@@ -1,11 +1,23 @@
-<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520">
-  <path fill="currentColor" d="M41 460L0 0h451l-41 460-185 52"></path>
-  <path fill="currentColor" d="M226 472l149-41 35-394H226"></path>
-  <path
-    fill="#181818"
-    d="M226 208H94l5 57h127zm0-114H84l5 56h137zm0 261l-124-33 7 60 117 32z"
-  ></path>
-  <path
-    fill="#181818"
-    d="M226 265h69l-7 73-62 17v59l115-32 26-288H226v56h80l-6 58h-74z"></path>
+<svg
+  {...Astro.props}
+  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520">
+  <defs>
+    <!-- Definimos la máscara para recortar las letras -->
+    <mask id="cutout4">
+      <!-- Fondo visible, todo blanco -->
+      <rect width="100%" height="100%" fill="white"/>
+      <!-- Letras en negro, recortadas -->
+      <path fill="black" d="M226 208H94l5 57h127zm0-114H84l5 56h137zm0 261l-124-33 7 60 117 32z"/>
+      <path fill="black" d="M226 265h69l-7 73-62 17v59l115-32 26-288H226v56h80l-6 58h-74z"/>
+    </mask>
+  </defs>
+
+  <!-- Aplicar la máscara para recortar las letras, y respetar la forma del fondo -->
+  <g mask="url(#cutout4)">
+    <!-- Mantener la forma del fondo del logo, con el color original que desees (en este caso blanco) -->
+    <path fill="white" d="M41 460L0 0h451l-41 460-185 52"></path>
+    <path fill="white" d="M226 472l149-41 35-394H226"></path>
+    <path fill="white" d="M226 208H94l5 57h127zm0-114H84l5 56h137zm0 261l-124-33 7 60 117 32z"></path>
+    <path fill="white" d="M226 265h69l-7 73-62 17v59l115-32 26-288H226v56h80l-6 58h-74z"></path>
+  </g>
 </svg>
