--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,19 @@
 ---
 import Menu from "../icons/Menu.astro";
 import { toggleMenu } from "../navigation.js";
+import Logo from "../icons/Logo.svg"
+import { getLangFromUrl, useTranslations } from '../i18n/utils'
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <header
   class="fixed z-10 top-0 left-0 right-0 backdrop-blur border-white/10 border-b-2"
 >
   <nav class="flex justify-between items-center py-3 w-[92%] mx-auto">
-    <div>
-     
+    <div class="flex items-center">
+      <img src='/logo.png' width="50" height="50"/>
       <a href="" class="font-bold text-xl">Port<span class="text-lavanda">folio</span></a>
     </div>
     <div
@@ -18,30 +23,36 @@ import { toggleMenu } from "../navigation.js";
         class="flex md:flex-row flex-col md:items-center md:gap-[2vw] gap-6 font-medium "
       >
         <li>
-          <a class="hover:opacity-50 transition px-3 py-1" href="#top">Home</a>
+          <a class="hover:opacity-50 transition px-3 py-1" href="#top">{t('nav.home')}</a>
         </li>
         <li>
-          <a class="hover:opacity-50 transition px-3 py-1" href="#tech">Tech</a>
+          <a class="hover:opacity-50 transition px-3 py-1" href="#tech">{t('nav.tech')}</a>
         </li>
         <li>
           <a class="hover:opacity-50 transition px-3 py-1" href="#education"
-            >Education</a
+            >{t('nav.education')}</a
           >
         </li>
-
+        <li>
+          <a class="hover:opacity-50 transition px-3 py-1" href="#experience"
+            >{t('nav.experience')}</a
+          >
+        </li>
         <li>
           <a class="hover:opacity-50 transition px-3 py-1" href="#projects"
-            >Projects</a
+            >{t('nav.projects')}</a
           >
         </li>
       </ul>
     </div>
 
     <div class="flex items-center gap-2">
+    <!-- 
       <a
         class="hover:opacity-80 transition px-3 py-1 bg-lavanda rounded-3xl"
         href="#contact">Contact</a
       >
+     -->
       <span id="menuIcon" class="size-6 cursor-pointer md:hidden">☰</span>
     </div>
   </nav>
