--- a/src/icons/tech/HTML.astro
+++ b/src/icons/tech/HTML.astro
@@ -1,11 +1,25 @@
-<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520">
-  <path fill="#fff" d="M41 460L0 0h451l-41 460-185 52"></path>
-  <path fill="#fff" d="M226 472l149-41 35-394H226"></path>
-  <path
-    fill="#181818"
-    d="M226 208h-75l-5-58h80V94H84l15 171h127zm0 147l-64-17-4-45h-56l7 89 117 32z"
-  ></path>
-  <path
-    fill="#181818"
-    d="M226 265h69l-7 73-62 17v59l115-32 16-174H226zm0-171v56h136l5-56z"></path>
-</svg>
+<svg 
+  {...Astro.props}
+  xmlns="http://www.w3.org/2000/svg"
+  viewBox="0 0 452 520">
+  <defs>
+    <mask id="cutout2">
+      <!-- Fondo blanco visible -->
+      <rect width="100%" height="100%" fill="white" />
+      <!-- Letras negras que serán recortadas (transparentes) -->
+      <path
+        fill="black"
+        d="M226 208h-75l-5-58h80V94H84l15 171h127zm0 147l-64-17-4-45h-56l7 89 117 32z"
+      />
+      <path
+        fill="black"
+        d="M226 265h69l-7 73-62 17v59l115-32 16-174H226zm0-171v56h136l5-56z"
+      />
+    </mask>
+  </defs>
+
+  <!-- Aplicar la máscara para que se recorten las letras -->
+  <g mask="url(#cutout2)">
+    <path fill="#fff" d="M41 460L0 0h451l-41 460-185 52" />
+    <path fill="#fff" d="M226 472l149-41 35-394H226" />
+  </g>
