--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
     <link rel="me" href="https://www.linkedin.com/in/fernanda-gonz%C3%A1lez-mu%C3%B1oz-37084b199/" type="text/html">
     <link rel="me" href="https://github.com/Keikooh" type="text/html">
 
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
