--- a/src/components/Buttons/NotColoredButton.astro
+++ b/src/components/Buttons/NotColoredButton.astro
@@ -1,10 +1,9 @@
 ---
-const { class: className, link } = Astro.props;
+const { class: className, link, disabled } = Astro.props;
 ---
 
 <a
-  href={link}
-  class={`flex justify-center items-center bg-white/5 py-3 px-5 font-medium rounded-full gap-x-2 hover:bg-white/10 border-2 border-white/5 transition cursor-pointer ${className}`}
+  class={ `flex justify-center items-center py-3 px-5 bg-white/5 border-white/5 font-medium rounded-full gap-x-2 border-2 transition ${className} ${ disabled ? `opacity-50` : `hover:bg-white/10 cursor-pointer`}`}
 >
   <slot />
 </a>
