--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -13,7 +13,7 @@ const EDUCATION = [
   {
     type: t('education.type1'),
     area: t('education.area1'),
-    time: "2020 - 2024",
+    time: t('education.time1'),
     school: "Tecnológico Superior de Jalisco",
     description: t('education.description1'),
     icon: Location,
