--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -12,11 +12,25 @@ const t = useTranslations(lang);
 
 const EXPERIENCE = [
   {
-    position: t('experience.position'),
+    position: t('experience.position1'),
+    company: "Axolotl Solutions",
+    time: t('experience.time1'),
+    location: t('experience.location1'),
+    description: t('experience.description1'),
+    technologies: [
+        "XAML",
+        "SQL Server",
+        "Git",
+        "C#",
+        ".NET MAUI"
+    ]  
+  },
+  {
+    position: t('experience.position2'),
     company: "HDI Seguros",
-    time: t('experience.time'),
-    location: t('experience.location'),
-    description: t('experience.description'),
+    time: t('experience.time2'),
+    location: t('experience.location2'),
+    description: t('experience.description2'),
     technologies: [
         "React",
         "Sybase",
