--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -75,6 +75,7 @@ const PROJECTS = [
             <NotColoredButton 
               class="w-[45%]"
               link={preview}
+              disabled={true}
             >
               <span class="text-md">Preview</span>
               <Expand class="size-4" />
