--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,8 @@ import Stack from "../icons/Stack.astro";
 import Briefcase from "../icons/Briefcase.astro";
 import { getLangFromUrl, useTranslations } from '../i18n/utils'
 
-const lang = getLangFromUrl(Astro.url);
+// const lang = getLangFromUrl(Astro.url);
+const lang = "es";
 const t = useTranslations(lang);
 ---
 <Layout title={t('title')}>
