--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -7,7 +7,7 @@ import Calendar from "../icons/Calendar.astro";
 import Pills from "./Pills.astro"
 import { getLangFromUrl, useTranslations } from '../i18n/utils'
 
-const lang = getLangFromUrl(Astro.url);
+const lang = "es";
 const t = useTranslations(lang);
 
 const EXPERIENCE = [
