--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -6,7 +6,7 @@ import Arrow from "../icons/Arrow.astro";
 import Calendar from "../icons/Calendar.astro";
 import { getLangFromUrl, useTranslations } from '../i18n/utils'
 
-const lang = "es";
+const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
 const EDUCATION = [
