--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,15 +5,11 @@ import Footer from "../components/Footer.astro";
 // Supports weights 100-900
 import "@fontsource-variable/dm-sans";
 
-interface Props {
-  title: string;
-}
-
-const { title } = Astro.props;
+const { lang, t } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={lang}>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -26,7 +22,7 @@ const { title } = Astro.props;
 
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>{t['page-title']}</title>
   </head>
   <body class="select-none">
     <div class="fixed left-0 top-0 -z-10 h-full w-full">
@@ -37,7 +33,7 @@ const { title } = Astro.props;
     </div>
 
     <div class="relative mx-auto h-screen w-full">
-      <Header />
+      <Header lang={lang} t={t}/>
       <slot/>
       <Footer/>
     </div>
