--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -55,7 +55,7 @@ const EXPERIENCE = [
           {experience.time} , {experience.location}
         </div>
         <div class="text-white/60 flex flex-col gap-y-1">
-          {experience.description.map( (item, index) => (
+          {experience.description.map( (item) => (
             <li>{item}</li>
           ) )}
         </div>
